Video working properly, resized and right orientation
->DreamPioneer Stable version

--- a/DREAMPioneer/DREAMPioneer/RightControlPanel.xaml
+++ b/DREAMPioneer/DREAMPioneer/RightControlPanel.xaml
@@ -4,10 +4,10 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:DREAM="clr-namespace:DREAMController;assembly=DREAMController" Width="105" Height="95" Background="TransParent"
-             xmlns:E="clr-namespace:DREAMPioneer" >
+             xmlns:E="clr-namespace:ROS_ImageWPF;assembly=ROS_ImageUtils" >
     <Grid Name="ButtonGrid" Background="Transparent" SnapsToDevicePixels="True">
         <Viewbox Stretch="Fill" StretchDirection="Both" >
-                <E:ImageControl x:Name="webcam"/>
+                <E:ImageControl E:ImageControl.TopicName="/robot_brain_1/camera/rgb/image_color"  x:Name="webcam" />
          </Viewbox>
     </Grid>
 </DREAM:ControlPanel>
