--- a/DREAMPioneer/DREAMPioneer/SurfaceWindow1.xaml
+++ b/DREAMPioneer/DREAMPioneer/SurfaceWindow1.xaml
@@ -2,13 +2,15 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:ros="clr-namespace:ROS_ImageWPF;assembly=ROS_ImageUtils"
+    xmlns:System="clr-namespace:System;assembly=mscorlib"
     Title="DREAMPioneer" WindowStyle="None" WindowState="Normal" Left="0" Top="0"
      Loaded="Window_Loaded" KeyDown="Window_KeyDown" ResizeMode="NoResize">
-    <Canvas Name="MainCanvas" Background="Gray" Width="1680" Height="1050">
-        <ros:ImageControl ros:ImageControl.TopicName="/camera/rgb/image_color" Grid.Row="0" Grid.Column="0" >
-            
-        </ros:ImageControl>
-        
+    
+    <Canvas Name="MainCanvas" Background="Gray" Width="1680" Height="1050" >
+        <!-- <ros:MapControl ros:MapControl.TopicName="/robot_brain_1/map" Width="1680" Height="1050" />-->
+        <!-- <ros:RobotControl Name="robotControl" ros:RobotControl.TopicName="/robot_brain_1/move_base/local_costmap/robot_footprint" Width="1680" Height="1050"  > </ros:RobotControl>-->
+        <!--<ros:ImageControl ros:ImageControl.TopicName="/robot_brain_1/camera/rgb/image_color" Width="1680" Height="1050" />-->
+<!--Canvas.Left="{Binding ros:RobotControl.xPos}" Canvas.Top="{Binding  ros:RobotControl.yPos}" Margin="{Binding robotPos}"-->
     </Canvas> 
 
 </Window>
