--- a/DREAMPioneer/DREAMPioneer/SurfaceWindow1.xaml
+++ b/DREAMPioneer/DREAMPioneer/SurfaceWindow1.xaml
@@ -8,7 +8,7 @@
     
     <Canvas Name="MainCanvas" Background="Gray" Width="1680" Height="1050" >
          <ros:MapControl ros:MapControl.TopicName="/robot_brain_1/map" Width="1680" Height="1050" />
-        <!-- <ros:RobotControl Name="robotControl" ros:RobotControl.TopicName="/robot_brain_1/move_base/local_costmap/robot_footprint" Width="1680" Height="1050"  > </ros:RobotControl>-->
+         <ros:RobotControl Name="robotControl" ros:RobotControl.TopicName="/robot_brain_1/move_base/local_costmap/robot_footprint" Width="1680" Height="1050"  > </ros:RobotControl>
         <!--<ros:ImageControl ros:ImageControl.TopicName="/robot_brain_1/camera/rgb/image_color" Width="1680" Height="1050" />-->
 <!--Canvas.Left="{Binding ros:RobotControl.xPos}" Canvas.Top="{Binding  ros:RobotControl.yPos}" Margin="{Binding robotPos}"-->
     </Canvas> 
