--- a/DREAMPioneer/DREAMPioneer/SurfaceWindow1.xaml
+++ b/DREAMPioneer/DREAMPioneer/SurfaceWindow1.xaml
@@ -8,18 +8,12 @@
 
     <Canvas Name="MainCanvas" Background="Gray" Width="1680" Height="1080"  >
         <Canvas Name="SubCanvas" Background="AliceBlue" Width="auto" Height="auto" >
-            <!-- <Canvas.RenderTransform>
-                <TransformGroup >
-                    <ScaleTransform  ScaleX="2" ScaleY="1"/>
-                    <TranslateTransform X="100" Y="100" />
-                </TransformGroup>
-            </Canvas.RenderTransform>-->
-
             <ros:MapControl Name="map" ros:MapControl.TopicName="/robot_brain_1/map" Width="1078" Height="212"  />
-            <ros:RobotControl Name="robotControl" ros:RobotControl.TopicName="/robot_brain_1/move_base/local_costmap/robot_footprint" Width="1078" Height="212"  > </ros:RobotControl>
+            <ros:RobotControl Name="robot_brain_1" ros:RobotControl.TopicName="/robot_brain_1/move_base/local_costmap/robot_footprint" Width="1078" Height="212"  > </ros:RobotControl>
         </Canvas>
-        <!--<ros:ImageControl ros:ImageControl.TopicName="/robot_brain_1/camera/rgb/image_color" Width="1680" Height="1050" />-->
-<!--Canvas.Left="{Binding ros:RobotControl.xPos}" Canvas.Top="{Binding  ros:RobotControl.yPos}" Margin="{Binding robotPos}"-->
+        <Canvas Name="DotCanvas" Background="AliceBlue" Width="auto" Height="auto">
+            
+        </Canvas>
     </Canvas> 
 
 </Window>
