--- a/ROS_ImageUtils/RobotControl.xaml
+++ b/ROS_ImageUtils/RobotControl.xaml
@@ -12,14 +12,8 @@
     <Grid SnapsToDevicePixels="True" Width="1680" Height="1050" >
         <Canvas Name="RobotCanvas" Width="auto" Height="auto" >
 
-            <Rectangle Name="robot" SnapsToDevicePixels="True" Width="10" Height="10" Fill="Blue" >
-                <!-- Canvas.Left="{Binding ElementName=BackgroundRectangle, Path=xPos}" Canvas.Top="{Binding ElementName=BackgroundRectangle, Path=yPos}"-->
-                <!--Canvas.Left="{Binding xPos}" Canvas.Top="{Binding yPos}" Margin="{Binding Source={StaticResource myDataSource}, Path=pos} -->
-              
-      <!--<Rectangle.Fill>
-        <ImageBrush x:Name="image" />
-      </Rectangle.Fill>-->
-    </Rectangle>
+            <Ellipse Name="robot" x:FieldModifier="public" SnapsToDevicePixels="True" Width="15" Height="15" Fill="Blue" />
+            <Rectangle Name="goal" x:FieldModifier="public" SnapsToDevicePixels="True" Width="10" Height="10" Fill="Red" />
         </Canvas>
     </Grid>
 </UserControl>
