video correctly changes its subscriber, shows up in rostopic, however never actually fires the callback.

--- a/DREAMPioneer/DREAMPioneer/RightControlPanel.xaml
+++ b/DREAMPioneer/DREAMPioneer/RightControlPanel.xaml
@@ -7,7 +7,7 @@
              xmlns:E="clr-namespace:ROS_ImageWPF;assembly=ROS_ImageUtils" >
     <Grid Name="ButtonGrid" Background="Transparent" SnapsToDevicePixels="True">
         <Viewbox Stretch="Fill" StretchDirection="Both" >
-            <E:ImageControl E:ImageControl.TopicName="" x:FieldModifier="public" x:Name="webcam" />
+            <E:ImageControl E:ImageControl.TopicName="notopicselected" x:FieldModifier="public" x:Name="webcam" />
          </Viewbox>
     </Grid>
 </DREAM:ControlPanel>
