--- a/DREAMPioneer/DREAMPioneer/SurfaceWindow1.xaml
+++ b/DREAMPioneer/DREAMPioneer/SurfaceWindow1.xaml
@@ -8,8 +8,8 @@
 
     <Canvas Name="MainCanvas" Background="Gray" Width="1680" Height="1080"  >
         <Canvas Name="SubCanvas" Background="AliceBlue" Width="auto" Height="auto" >
-            <ros:MapControl Name="map" ros:MapControl.TopicName="/robot_brain_1/map" Width="1078" Height="212"  />
-            <ros:RobotControl Name="robot_brain_1" ros:RobotControl.TopicName="/robot_brain_1/move_base/local_costmap/robot_footprint" Width="1078" Height="212"  > </ros:RobotControl>
+             <ros:RobotControl Background="Black" Name="robot_brain_1" ros:RobotControl.TopicName="/robot_brain_1/move_base/local_costmap/robot_footprint" Width="1078" Height="212"  > </ros:RobotControl>
+             <ros:MapControl Name="map" ros:MapControl.TopicName="/robot_brain_1/map" Width="1078" Height="212"  /> 
         </Canvas>
         <Canvas Name="DotCanvas" Background="AliceBlue" Width="auto" Height="auto">
             
