Unique waypointlists working

--- a/DREAMPioneer/DREAMPioneer/GestureObject.xaml
+++ b/DREAMPioneer/DREAMPioneer/GestureObject.xaml
@@ -1,4 +1,4 @@
-﻿<s:SurfaceUserControl x:Class="ROS_ImageWPF.GestureObject"
+﻿<s:SurfaceUserControl x:Class="DREAMPioneer.GestureObject"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:s="http://schemas.microsoft.com/surface/2008" Background="#01000000" IsHitTestVisible="True"
