--- a/DREAMPioneer/DREAMPioneer/RobotControl.xaml
+++ b/DREAMPioneer/DREAMPioneer/RobotControl.xaml
@@ -1,20 +1,19 @@
-﻿<UserControl x:Class="ROS_ImageWPF.RobotControl"
-                      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<UserControl x:Class="DREAMPioneer.RobotControl"
+                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       Loaded="UserControl_Loaded" SnapsToDevicePixels="True" SizeChanged="UserControl_SizeChanged"
-                      xmlns:c="clr-namespace:ROS_ImageWPF">
- <!--     <UserControl.Resources>
+                      xmlns:c="clr-namespace:DREAMPioneer" >
+    <!--     <UserControl.Resources>
          <c:RobotControl x:Key="myDataSource"/> 
     </UserControl.Resources>  -->
     <!-- <UserControl.DataContext>
         <Binding Source="{StaticResource myDataSource}"/>
     </UserControl.DataContext> -->
-    <Grid SnapsToDevicePixels="True" Width="1680" Height="1050" >
-        <Canvas Name="RobotCanvas" Width="auto" Height="auto" >
-            
+    <Canvas Name="RobotCanvas" Width="auto" Height="auto" >
+
             <c:GestureObject x:Name="robot" x:FieldModifier="public" Height= "100" Width = "100" Background="Transparent"/>
 
             <Rectangle x:Name="goal" x:FieldModifier="public" SnapsToDevicePixels="True" Width="14" Height="14" Fill="Red" />
         </Canvas>
-    </Grid>
+    
 </UserControl>
