--- a/DREAMPioneer/DREAMPioneer/SurfaceWindow1.xaml
+++ b/DREAMPioneer/DREAMPioneer/SurfaceWindow1.xaml
@@ -1,17 +1,18 @@
 ﻿<Window x:Class="DREAMPioneer.SurfaceWindow1"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:ros="clr-namespace:ROS_ImageWPF;assembly=ROS_ImageUtils"
     xmlns:System="clr-namespace:System;assembly=mscorlib"
+    xmlns:c="clr-namespace:ROS_ImageWPF;assembly=ROS_ImageUtils"
+    xmlns:d="clr-namespace:DREAMPioneer"
     Title="DREAMPioneer" WindowStyle="None" WindowState="Normal" Left="0" Top="0"
      Loaded="Window_Loaded" KeyDown="Window_KeyDown" ResizeMode="NoResize"
         VerticalAlignment="Center" HorizontalAlignment="Center">
-
-    <Canvas Name="MainCanvas" Background="Gray" Width="1024" Height="768" VerticalAlignment="Center" HorizontalAlignment="Center">
+    
+        <Canvas Name="MainCanvas" Background="Gray" Width="1024" Height="768" VerticalAlignment="Center" HorizontalAlignment="Center">
         <Canvas Name="SubCanvas" Background="Transparent" Width="1024" Height="768" VerticalAlignment="Center" HorizontalAlignment="Center" >
-            <ros:MapControl Name="map" ros:MapControl.TopicName="/robot_brain_1/map" Width="1078" Height="212" VerticalAlignment="Center" HorizontalAlignment="Center" />  
-            <ros:RobotControl Background="Black" Name="robot_brain_1" ros:RobotControl.TopicName="/robot_brain_1/move_base/local_costmap/robot_footprint" Width="1078" Height="212"  > </ros:RobotControl>
-             
+            <c:MapControl Name="map" c:MapControl.TopicName="/robot_brain_1/map" Width="1078" Height="212" VerticalAlignment="Center" HorizontalAlignment="Center" />  
+            <d:RobotControl Background="Black" x:Name="robot_brain_1" d:RobotControl.TopicName="/robot_brain_1/move_base/local_costmap/robot_footprint" Width="1078" Height="212"  > </d:RobotControl>
+           
         </Canvas>
         <Canvas Name="DotCanvas" Background="Transparent" Width="1024" Height="768" VerticalAlignment="Center" HorizontalAlignment="Center">
             
