--- a/DREAMPioneer/DREAMPioneer/SurfaceWindow1.xaml
+++ b/DREAMPioneer/DREAMPioneer/SurfaceWindow1.xaml
@@ -9,10 +9,9 @@
         VerticalAlignment="Center" HorizontalAlignment="Center">
     
         <Canvas Name="MainCanvas" Background="Gray" Width="1024" Height="768" VerticalAlignment="Center" HorizontalAlignment="Center">
-        <Canvas Name="SubCanvas" Background="Transparent" Width="1024" Height="768" VerticalAlignment="Center" HorizontalAlignment="Center" >
-            <c:MapControl x:Name="map" Background ="Black" c:MapControl.TopicName="/robot_brain_1/map" Width="1078" Height="212" VerticalAlignment="Center" HorizontalAlignment="Center" />  
-            <d:RobotControl Background="Transparent" x:Name="robot_brain_1" d:RobotControl.TopicName="/robot_brain_1/move_base/local_costmap/robot_footprint" Width="1078" Height="212"  > </d:RobotControl>
-           
+        <Canvas x:Name="SubCanvas" Background="Transparent" Width="1024" Height="768" VerticalAlignment="Center" HorizontalAlignment="Center" >
+            <c:MapControl x:Name="map" Background ="Black" c:MapControl.TopicName="/robot_brain_2/map" Width="1078" Height="212" VerticalAlignment="Center" HorizontalAlignment="Center" />  
+            
         </Canvas>
         <Canvas Name="DotCanvas" Background="Transparent" Width="1024" Height="768" VerticalAlignment="Center" HorizontalAlignment="Center">
             
