--- a/DREAMPioneer/DREAMPioneer/RightControlPanel.xaml
+++ b/DREAMPioneer/DREAMPioneer/RightControlPanel.xaml
@@ -6,9 +6,12 @@
              xmlns:DREAM="clr-namespace:DREAMController;assembly=DREAMController" Width="105" Height="95" Background="TransParent"
              xmlns:E ="clr-namespace:ROS_ImageWPF;assembly=ROS_ImageUtils">
     <Grid Name="ButtonGrid" Background="Transparent" SnapsToDevicePixels="True">
-        <Viewbox Stretch="Fill" StretchDirection="Both" >
+        <Viewbox Stretch="Fill" StretchDirection="Both"  RenderTransformOrigin="0.5,0.5">
             <!-- <E:ImageControl E:ImageControl.TopicName="{Binding Path=Text, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" x:FieldModifier="public" x:Name="webcam" /> -->
-            <E:ImageControl E:ImageControl.TopicName="/robot_brain_1/camera/rgb/image_color" x:FieldModifier="public" x:Name="webcam" />
+            <Viewbox.RenderTransform>
+                <ScaleTransform ScaleX="-1" ScaleY="-1"/>
+            </Viewbox.RenderTransform>
+            <E:CompressedImageControl E:CompressedImageControl.TopicName="/robot_brain_1/camera/rgb/image_color/compressed" x:FieldModifier="public" x:Name="webcam" />
          </Viewbox>
     </Grid>
 </DREAM:ControlPanel>
