--- a/ROS_ImageUtils/MapControl.xaml
+++ b/ROS_ImageUtils/MapControl.xaml
@@ -2,12 +2,16 @@
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       Loaded="UserControl_Loaded" SnapsToDevicePixels="True" SizeChanged="UserControl_SizeChanged" >
-  <Grid SnapsToDevicePixels="True" >
-        <Rectangle SnapsToDevicePixels="True" > 
-            <!-- Stretch="Fill" -->
+  <Grid SnapsToDevicePixels="True" >      
+        <Rectangle SnapsToDevicePixels="True"  SizeChanged="Rectangle_SizeChanged" Name="DamnNearKilledHim"> 
+            <!-- Stretch="Fill" -->            
       <Rectangle.Fill>
-        <ImageBrush x:Name="image" />
-      </Rectangle.Fill>
+                <ImageBrush x:Name="image" >
+                    <!--<ImageBrush.Transform>
+                        <ScaleTransorm ScaleY="-1" x:Name="flipper" />
+                    </ImageBrush.Transform>-->
+                </ImageBrush>
+            </Rectangle.Fill>
     </Rectangle>
   </Grid>
 </UserControl>
