--- a/DREAMPioneer/DREAMPioneer/SurfaceWindow1.xaml
+++ b/DREAMPioneer/DREAMPioneer/SurfaceWindow1.xaml
@@ -5,16 +5,17 @@
     xmlns:c="clr-namespace:ROS_ImageWPF;assembly=ROS_ImageUtils"
     xmlns:d="clr-namespace:DREAMPioneer"
     Title="DREAMPioneer" WindowStyle="None" WindowState="Normal" Left="0" Top="0"
-     Loaded="Window_Loaded" KeyDown="Window_KeyDown" ResizeMode="NoResize"
-        VerticalAlignment="Center" HorizontalAlignment="Center">
-    <Canvas Name="MainCanvas" Background="Gray" Width="1024" Height="768" RenderTransformOrigin=".5,.5"  ClipToBounds="False">
+     Loaded="Window_Loaded" KeyDown="Window_KeyDown" ResizeMode="NoResize" Background="Transparent"
+        VerticalAlignment="Center" HorizontalAlignment="Center" AllowsTransparency="True">
+    <Canvas Name="MainCanvas" Width="1024" Height="768" RenderTransformOrigin=".5,.5"  ClipToBounds="False">
+        <Canvas Name="BackgroundCanvas" Width="1024" Height="768" Background="Gray" Opacity="0.5" IsHitTestVisible="False" />
         <Canvas Name="TopsyTurvey" Background="Transparent" Width="1024" Height="768" RenderTransformOrigin=".5,.5"  ClipToBounds="False">
             <Canvas.RenderTransform>
                 <ScaleTransform x:Name="Flipper" ScaleX="-1"></ScaleTransform>
             </Canvas.RenderTransform>
             <Canvas Name="TranslateCanvas" Background="Transparent" ClipToBounds="False" RenderTransformOrigin=".5,.5">
                 <Canvas Name="SubCanvas" Background="Transparent" ClipToBounds="False" RenderTransformOrigin=".5,.5">             
-                    <c:MapControl Name="map" Background ="Black" c:MapControl.TopicName="/robot_brain_2/map" Width="1078" Height="212"  ClipToBounds="False"/>
+                    <c:MapControl Name="map" Background ="Black" c:MapControl.TopicName="/robot_brain_2/map" Width="Auto" Height="Auto"  ClipToBounds="False"/>
                     <Canvas Name="DotCanvas" Background="Transparent" Width="1024" Height="768"  ClipToBounds="False" />
                 </Canvas>
             </Canvas>
