--- a/DREAMPioneer/DREAMPioneer/GoalDot.xaml
+++ b/DREAMPioneer/DREAMPioneer/GoalDot.xaml
@@ -2,6 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:s="http://schemas.microsoft.com/surface/2008" IsHitTestVisible="False"
+    x:Name="me"
     
     
                      Height="10" Width="10"
