--- a/DREAMPioneer/DREAMPioneer/SurfaceWindow1.xaml
+++ b/DREAMPioneer/DREAMPioneer/SurfaceWindow1.xaml
@@ -7,6 +7,7 @@
     Title="DREAMPioneer" WindowStyle="None" WindowState="Normal" Left="0" Top="0"
      Loaded="Window_Loaded" KeyDown="Window_KeyDown" ResizeMode="NoResize" Background="Gray"
         VerticalAlignment="Center" HorizontalAlignment="Center" AllowsTransparency="True">
+    <Grid>
     <Canvas Name="MainCanvas" Width="1024" Height="768" RenderTransformOrigin=".5,.5"  ClipToBounds="False">
         <Canvas Name="BackgroundCanvas" Width="1024" Height="768" Background="Gray" Opacity="0.01" IsHitTestVisible="False" />
         <Canvas Name="TopsyTurvey" Background="Transparent" Width="1024" Height="768" RenderTransformOrigin=".5,.5"  ClipToBounds="False">
@@ -15,10 +16,11 @@
             </Canvas.RenderTransform>
             <Canvas Name="TranslateCanvas" Background="Transparent" ClipToBounds="False" RenderTransformOrigin=".5,.5">
                 <Canvas Name="SubCanvas" Background="Transparent" ClipToBounds="False" RenderTransformOrigin=".5,.5">             
-                    <c:MapControl Name="map" Background ="Black" c:MapControl.TopicName="/robot_brain_1/map" Width="Auto" Height="Auto"  ClipToBounds="False"/>
+                    <c:MapControl Name="map" Background ="Black" c:MapControl.TopicName="/robot_brain_2/map" Width="Auto" Height="Auto"  ClipToBounds="False"/>
                     <Canvas Name="DotCanvas" Background="Transparent" Width="1024" Height="768"  ClipToBounds="False" />
                 </Canvas>
             </Canvas>
         </Canvas>
     </Canvas>
+    </Grid>
 </Window>
