--- a/CompressedImageView/MainWindow.xaml
+++ b/CompressedImageView/MainWindow.xaml
@@ -8,55 +8,38 @@
         <TextBlock Height="20" HorizontalAlignment="Center" Margin="0,20,0,0" Name="TimerStatusTextBlock" Text="Timer Status Text Block"  Foreground="Green" VerticalAlignment="Top"/>
         <TextBlock Height="20" HorizontalAlignment="Center" Margin="0,40,0,0" Name="TimerTextBlock" Text="Timer Text Block" VerticalAlignment="Top"/>
 
-        <TabControl Height="518" HorizontalAlignment="Center" Margin="0,60,0,0" Name="MainCameraTabControl" VerticalAlignment="Top" Width="874" SelectionChanged="MainCameraTabControl_SelectionChanged">
-
-            <TabControl.Background>
-                <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
-                    <GradientStop Color="Black" Offset="0"/>
-                    <GradientStop Color="Gold" Offset="1"/>
-                </LinearGradientBrush>
-            </TabControl.Background>
-
+        <TabControl Background="Gold" Height="518" HorizontalAlignment="Center" Margin="0,60,0,0" Name="MainCameraTabControl" VerticalAlignment="Top" Width="874" SelectionChanged="MainCameraTabControl_SelectionChanged">
             <TabItem Background="Gold" Header="Main Camera 1" Name="MainCamera1">
                 <!--Currently displaying 4:3 aspect ratio. Make Width 864 for 16:9 Widescreen-->
-                <c:CompressedImageControl Background="Gold" c:CompressedImageControl.TopicName="image_raw/compressed" Height="486" x:FieldModifier="public" x:Name="TestImage0" Width="648">
-
+                <c:CompressedImageControl Background="Gold" c:CompressedImageControl.TopicName="image_raw1/compressed" Height="486" x:FieldModifier="public" x:Name="TestImage0" Width="648">
                     <c:CompressedImageControl.LayoutTransform>
                         <RotateTransform Angle="180"/>
                     </c:CompressedImageControl.LayoutTransform>
                 </c:CompressedImageControl>
             </TabItem>
             
-            <TabItem Background="Blue" Header="Main Camera 2" Name="MainCamera2">
+            <TabItem Background="Red" Header="Main Camera 2" Name="MainCamera2">
             </TabItem>
-            <TabItem Background="Red" Header="Main Camera 3" Name="MainCamera3">
+            <TabItem Background="Green" Header="Main Camera 3" Name="MainCamera3">
             </TabItem>
-            <TabItem Background="Green" Header="Main Camera 4" Name="MainCamera4">
+            <TabItem Background="Blue" Header="Main Camera 4" Name="MainCamera4">
             </TabItem>
         </TabControl>
 
-        <TabControl HorizontalAlignment="Center" Height="284" Margin="0,580,0,0" Name="SubCameraTabControl" VerticalAlignment="Top" Width="458" SelectionChanged="SubCameraTabControl_SelectionChanged">
-            
-            <TabControl.Background>
-                <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
-                    <GradientStop Color="Black" Offset="0"/>
-                    <GradientStop Color="Gold" Offset="1"/>
-                </LinearGradientBrush>
-            </TabControl.Background>
-
+        <TabControl Background="Gold" HorizontalAlignment="Center" Height="284" Margin="0,580,0,0" Name="SubCameraTabControl" VerticalAlignment="Top" Width="458" SelectionChanged="SubCameraTabControl_SelectionChanged">
             <TabItem Background="Gold" Header="Sub Camera 1" Name="SubCamera1">
+            </TabItem>
+            <TabItem Background="Red" Header="Sub Camera 2" Name="SubCamera2">
                 <!--Currently displaying 4:3 aspect ratio. Make Width 448 for 16:9 Widescreen-->
-                <c:CompressedImageControl Background="Gold" c:CompressedImageControl.TopicName="image_raw/compressed" Height="252" x:FieldModifier="public" x:Name="TestImage1" Width="336">
+                <c:CompressedImageControl Background="Blue" c:CompressedImageControl.TopicName="image_raw2/compressed" Height="252" x:FieldModifier="public" x:Name="TestImage1" Width="336">
                     <c:CompressedImageControl.LayoutTransform>
                         <RotateTransform Angle="180"/>
                     </c:CompressedImageControl.LayoutTransform>
                 </c:CompressedImageControl>
             </TabItem>
-            <TabItem Background="Blue" Header="Sub Camera 2" Name="SubCamera2">
+            <TabItem Background="Green" Header="Sub Camera 3" Name="SubCamera3">
             </TabItem>
-            <TabItem Background="Red" Header="Sub Camera 3" Name="SubCamera3">
-            </TabItem>
-            <TabItem Background="Green" Header="Sub Camera 4" Name="SubCamera4">
+            <TabItem Background="Blue" Header="Sub Camera 4" Name="SubCamera4">
             </TabItem>
         </TabControl>
 
