--- a/CompressedImageView/MainWindow.xaml
+++ b/CompressedImageView/MainWindow.xaml
@@ -10,10 +10,10 @@
         <TextBlock Height="20" HorizontalAlignment="Center" Margin="0,20,0,0" Name="TimerStatusTextBlock" Text="Timer Status Text Block"  Foreground="Green" VerticalAlignment="Top"/>
         <TextBlock Height="30" HorizontalAlignment="Center" Margin="0,40,0,0" Name="TimerTextBlock" Text="Timer Text Block" VerticalAlignment="Top" FontSize="20" />
 
-        <TabControl Background="Gold" Height="518" HorizontalAlignment="Center" Margin="0,70,0,0" Name="MainCameraTabControl" VerticalAlignment="Top" Width="874" SelectionChanged="MainCameraTabControl_SelectionChanged">
+        <TabControl Background="Turquoise" Height="518" HorizontalAlignment="Center" Margin="0,70,0,0" Name="MainCameraTabControl" VerticalAlignment="Top" Width="874" SelectionChanged="MainCameraTabControl_SelectionChanged">
             <TabItem Background="Gold" Header="Main Camera 1" Name="MainCamera1">
                 <!--Currently displaying 4:3 aspect ratio. Make Width 864 for 16:9 Widescreen-->
-                <c:CompressedImageControl c:CompressedImageControl.TopicName="image_raw1/compressed" Height="486" x:FieldModifier="public" x:Name="TestImage0" Width="648">
+                <c:CompressedImageControl c:CompressedImageControl.TopicName="/jpeg_compressed_ui/compressed" Height="486" x:FieldModifier="public" x:Name="TestImage0" Width="648">
                     <c:CompressedImageControl.LayoutTransform>
                         <RotateTransform Angle="180"/>
                     </c:CompressedImageControl.LayoutTransform>
@@ -26,20 +26,17 @@
             </TabItem>
             <TabItem Background="Blue" Header="Main Camera 4" Name="MainCamera4">
             </TabItem>
-            <TabItem Header="tabItem1" HorizontalAlignment="Left" Name="tabItem1" VerticalAlignment="Top">
-                <Grid></Grid>
-            </TabItem>
         </TabControl>
 
         <TabControl Background="Gold" HorizontalAlignment="Center" Height="284" Margin="0,590,0,0" Name="SubCameraTabControl" VerticalAlignment="Top" Width="458" SelectionChanged="SubCameraTabControl_SelectionChanged">
             <TabItem Background="Gold" Header="Sub Camera 1" Name="SubCamera1"></TabItem>
             <TabItem Background="Red" Header="Sub Camera 2" Name="SubCamera2">
                 <!--Currently displaying 4:3 aspect ratio. Make Width 448 for 16:9 Widescreen-->
-                <c:CompressedImageControl c:CompressedImageControl.TopicName="image_raw2/compressed" Height="252" x:FieldModifier="public" x:Name="TestImage1" Width="336">
+                <!--<c:CompressedImageControl c:CompressedImageControl.TopicName="image_raw2/compressed" Height="252" x:FieldModifier="public" x:Name="TestImage1" Width="336">
                     <c:CompressedImageControl.LayoutTransform>
                         <RotateTransform Angle="180"/>
                     </c:CompressedImageControl.LayoutTransform>
-                </c:CompressedImageControl>
+                </c:CompressedImageControl>-->
             </TabItem>
             <TabItem Background="Green" Header="Sub Camera 3" Name="SubCamera3">
             </TabItem>
@@ -47,37 +44,37 @@
             </TabItem>
         </TabControl>
 
-        <Image Height="240" HorizontalAlignment="Left" Margin="0,0,0,0" Name="XBOX360ControllerImage" Source="XBOX360Controller.png" VerticalAlignment="Bottom" />
+        <Image Height="240" HorizontalAlignment="Left" Margin="0,0,0,0" Name="PSControllerImage" Source="PSController.png" VerticalAlignment="Bottom" />
 
-        <ProgressBar Height="100" HorizontalAlignment="Left" Margin="101,0,0,219" Maximum="1" Minimum="0" Name="LeftTriggerProgressBar" Orientation="Vertical" Width="50" VerticalAlignment="Bottom"/>
-        <TextBlock HorizontalAlignment="Left" Margin="101,0,0,219" Name="LeftTriggerValueTextBlock" Text="0%" TextAlignment="Center" Width="50" VerticalAlignment="Bottom"/>
+        <ProgressBar Height="100" HorizontalAlignment="Left" Margin="111,0,0,203" Maximum="1" Minimum="0" Name="LeftTriggerProgressBar" Orientation="Vertical" Width="50" VerticalAlignment="Bottom"/>
+        <TextBlock HorizontalAlignment="Left" Margin="111,0,0,203" Name="LeftTriggerValueTextBlock" Text="0%" TextAlignment="Center" Width="50" VerticalAlignment="Bottom"/>
         
-        <ProgressBar Height="100" HorizontalAlignment="Left" Margin="220,0,0,219" Maximum="1" Minimum="0" Name="RightTriggerProgressBar" Width="50" Orientation="Vertical" VerticalAlignment="Bottom"/>
-        <Image Source="lefttrigger.png" Name="LTrigPress" Width="30" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="63,0,0,218" Visibility="Hidden"></Image>
-        <TextBlock HorizontalAlignment="Left" Margin="220,0,0,219" Name="RightTriggerValueTextBlock" Text="0%" TextAlignment="Center" VerticalAlignment="Bottom" Width="50" />
-        <Image Source="righttrigger.png" Name="RTrigPress" Width="30" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="278,0,0,218" Visibility="Hidden"></Image>
-
-        <Image Source="left shoulder.png" Name="LShPress" Width="80" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="19,0,0,185" Visibility="Hidden"></Image>
-        <Image Source="right shoulder.png" Name="RShPress" Width="80" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="272,0,0,185" Visibility="Hidden"></Image>
+        <ProgressBar Height="100" HorizontalAlignment="Left" Margin="223,0,0,203" Maximum="1" Minimum="0" Name="RightTriggerProgressBar" Width="50" Orientation="Vertical" VerticalAlignment="Bottom"/>
         
-        <Ellipse Fill="White" Height="15" HorizontalAlignment="Left" Margin="135,0,0,117" Name="Back" Stroke="DarkGray" Width="20" VerticalAlignment="Bottom"/>
-        <Ellipse Fill="White" Height="15" HorizontalAlignment="Left" Margin="219,0,0,117" Name="Start" Stroke="DarkGray" Width="20" VerticalAlignment="Bottom"/>
+        <TextBlock HorizontalAlignment="Left" Margin="223,0,0,203" Name="RightTriggerValueTextBlock" Text="0%" TextAlignment="Center" VerticalAlignment="Bottom" Width="50" />
+        
 
-        <Ellipse Fill="Gray" Height="50" HorizontalAlignment="Left" Margin="32,0,0,91" Name="LeftStick"  Width="50" VerticalAlignment="Bottom"/>
-        <Ellipse Fill="LightGray" Height="10" HorizontalAlignment="Left" Margin="52,0,0,111" Name="LeftStickValue" Width="10" VerticalAlignment="Bottom"/>
+        
+        
+        
+        <Ellipse Fill="White" Height="15" HorizontalAlignment="Left" Margin="148,0,0,137" Name="Back" Stroke="DarkGray" Width="20" VerticalAlignment="Bottom"/>
+        <Ellipse Fill="White" Height="15" HorizontalAlignment="Left" Margin="214,0,0,137" Name="Start" Stroke="DarkGray" Width="20" VerticalAlignment="Bottom"/>
+
+        <Ellipse Fill="Gray" Height="50" HorizontalAlignment="Left" Margin="112,0,0,67" Name="LeftStick"  Width="50" VerticalAlignment="Bottom"/>
+        <Ellipse Fill="LightGray" Height="10" HorizontalAlignment="Left" Margin="131,0,0,87" Name="LeftStickValue" Width="10" VerticalAlignment="Bottom"/>
         <!--Y, X, B, A-->
-        <Ellipse Fill="Gold" Height="30" HorizontalAlignment="Left" Margin="299,0,0,138" Name="Y" Stroke="Gold" Width="30" VerticalAlignment="Bottom"/>
-        <Ellipse Fill="Blue" Height="30" HorizontalAlignment="Left" Margin="271,0,0,110" Name="X" Stroke="Blue" Width="30" VerticalAlignment="Bottom"/>
-        <Ellipse Fill="Red" Height="30" HorizontalAlignment="Left" Margin="326,0,0,110" Name="B" Stroke="Red" Width="30" VerticalAlignment="Bottom"/>
-        <Ellipse Fill="Green" Height="30" HorizontalAlignment="Left" Margin="299,0,0,83" Name="A" Stroke="Green" Width="30" VerticalAlignment="Bottom"/>
+        <Ellipse Fill="Gold" Height="30" HorizontalAlignment="Left" Margin="292,0,0,164" Name="Y" Stroke="Gold" Width="30" VerticalAlignment="Bottom"/>
+        <Ellipse Fill="Blue" Height="30" HorizontalAlignment="Left" Margin="264,0,0,136" Name="X" Stroke="Blue" Width="30" VerticalAlignment="Bottom"/>
+        <Ellipse Fill="Red" Height="30" HorizontalAlignment="Left" Margin="320,0,0,136" Name="B" Stroke="Red" Width="30" VerticalAlignment="Bottom"/>
+        <Ellipse Fill="Green" Height="30" HorizontalAlignment="Left" Margin="292,0,0,108" Name="A" Stroke="Green" Width="30" VerticalAlignment="Bottom"/>
         <!--Right Stick-->
-        <Ellipse Fill="Gray" Height="50" Margin="218,0,0,34" Name="RightStick"  Width="50" HorizontalAlignment="Left" VerticalAlignment="Bottom"/>
-        <Ellipse Height="10" Margin="238,0,0,53" Name="RightStickValue" Width="10" Fill="LightGray" HorizontalAlignment="Left" VerticalAlignment="Bottom"/>
+        <Ellipse Fill="Gray" Height="50" Margin="223,0,0,67" Name="RightStick"  Width="50" HorizontalAlignment="Left" VerticalAlignment="Bottom"/>
+        <Ellipse Height="10" Margin="243,0,0,87" Name="RightStickValue" Width="10" Fill="LightGray" HorizontalAlignment="Left" VerticalAlignment="Bottom"/>
         <!--DPad-->
-        <Rectangle Fill="DarkGray" Height="20" Margin="115,0,0,69" Name="DPadUp"  Width="20" HorizontalAlignment="Left" Stroke="DarkGray" VerticalAlignment="Bottom"/>
-        <Rectangle Fill="DarkGray" Height="20" Margin="115,0,0,29" Name="DPadDown"  Width="20" HorizontalAlignment="Left" Stroke="DarkGray" VerticalAlignment="Bottom"/>
-        <Rectangle Fill="DarkGray" Height="20" Margin="95,0,0,49" Name="DPadLeft"  Width="20" HorizontalAlignment="Left" Stroke="DarkGray" VerticalAlignment="Bottom"/>
-        <Rectangle Fill="DarkGray" Height="20" Margin="135,0,0,49" Name="DPadRight"  Width="20" HorizontalAlignment="Left" Stroke="DarkGray" VerticalAlignment="Bottom"/>
+        <Rectangle Fill="DarkGray" Height="20" Margin="68,0,0,163" Name="DPadUp"  Width="20" HorizontalAlignment="Left" Stroke="DarkGray" VerticalAlignment="Bottom"/>
+        <Rectangle Fill="DarkGray" Height="20" Margin="68,0,0,121" Name="DPadDown"  Width="20" HorizontalAlignment="Left" Stroke="DarkGray" VerticalAlignment="Bottom"/>
+        <Rectangle Fill="DarkGray" Height="20" Margin="48,0,0,142" Name="DPadLeft"  Width="20" HorizontalAlignment="Left" Stroke="DarkGray" VerticalAlignment="Bottom"/>
+        <Rectangle Fill="DarkGray" Height="20" Margin="89,0,0,142" Name="DPadRight"  Width="20" HorizontalAlignment="Left" Stroke="DarkGray" VerticalAlignment="Bottom"/>
         <ArmGaugeUC:ArmGauge Visibility="Visible" Width="160" Height="510" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,20,20,0" />
         <RosoutDebugUC:UserControl1 Visibility="Visible" Width="480"  HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,30,30" />
         
@@ -140,5 +137,9 @@
         <TextBlock Height="20" HorizontalAlignment="Center" Margin="50,0,0,50" Name="GreenTextBlock" Text="Green" VerticalAlignment="Bottom" />
         <TextBlock Height="20" HorizontalAlignment="Center" Margin="150,0,0,50" Name="BlueTextBlock" Text="Blue" VerticalAlignment="Bottom" />
         <TextBlock Height="20" HorizontalAlignment="Center" Margin="250,0,0,50" Name="PurpleTextBlock" Text="Purple" VerticalAlignment="Bottom" />
+        <Rectangle Height="20" HorizontalAlignment="Left" Margin="48,0,0,228" Name="LShPress" Stroke="DarkGray" VerticalAlignment="Bottom" Width="60" />
+        <Rectangle Height="20" HorizontalAlignment="Left" Margin="48,0,0,247" Name="LTrigPress" Stroke="DarkGray" VerticalAlignment="Bottom" Width="60" />
+        <Rectangle Height="20" HorizontalAlignment="Left" Margin="275,0,0,228" Name="RShPress" Stroke="DarkGray" VerticalAlignment="Bottom" Width="60" />
+        <Rectangle Height="20" HorizontalAlignment="Left" Margin="275,0,0,247" Name="RTrigPress" Stroke="DarkGray" VerticalAlignment="Bottom" Width="60" />
     </Grid>
 </Window>
